<resources>
    <string name="app_name">Bill calculator</string>
    <string name="action_settings">Settings</string>
    <string name="check_amount">Check amount</string>
    <string name="tip_percentage">Tip percentage</string>
    <string name="label_check_amount">Check</string>
    <string name="label_total">Total</string>
    <string name="label_tip">Tip</string>
    <string name="dollar_amount">$%1$.02f</string>
  <string name="save_hint">Add Location</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_save">Save</string>
  <string name="action_load">Load</string>
</resources>
