<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="vm"
        type="com.example.billcalculator.viewmodel.RestuarantViewModel"/>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      tools:showIn="@layout/activity_main"
      tools:context=".view.TipCalculatorActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/check_amount"
          android:inputType="numberDecimal"
          android:text="@={vm.inputCheckAmount}"
          android:id="@+id/ed_check_amount"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout2">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/tip_percentage"
          android:inputType="number"
          android:text="@={vm.inputTipPercentage}"
          android:id="@+id/edt_tip_percentage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:id="@+id/linearLayout">


      <LinearLayout
          android:orientation="vertical"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1">

        <TextView
            android:text="@{vm.outputCheckAmount}"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/tv_check_amount"/>

        <TextView
            android:text="@string/label_check_amount"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1">

        <TextView
            android:text="@{vm.outputTipAmount}"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/tv_tip_amount"/>

        <TextView
            android:text="@string/label_tip"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1">

        <TextView
            android:text="@{vm.outputTotalAmount}"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_grand_total"
            />

        <TextView
            android:text="@string/label_total"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"/>
      </LinearLayout>


    </LinearLayout>

    <TextView
        android:text="@{vm.locationName}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/tv_location_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>